# Fresh

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
client/: tracker-client.ts
docs/: PRIVACY.md  README.md  SETUP.md
examples/: cli-tracker.ts  github-integration.ts
flutter_tracker/: .gitignore  README.md  demo.sh  install.sh  pubspec.yaml  run.sh
flutter_tracker/lib/: activity_service.dart  main.dart  native_tracker.dart  storage_service.dart  tracker_integration.dart  vscode_prompt_tracker.dart
flutter_tracker/linux/: activity_tracker.c  activity_tracker.h  build.sh
plugin/django-time-logging/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
plugin/django-time-logging/time_logging/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
plugin/django-time-logging/time_logging/migrations/: __init__.py
plugin/django-time-logging/time_logging/templates/: base.html  time_logs.html
plugin/django-time-logging/time_logging/templatetags/: __init__.py  custom_filters.py
public/: dashboard.html
src/: index.ts
src/api/: routes.ts
src/durable-objects/: tracker-session.ts
src/modules/: activity-tracker.ts  agent-tracker.ts  github-monitor.ts  screenshot-analyzer.ts  session-manager.ts
src/types/: index.ts
src/utils/: crypto.ts
