[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-logging"
version = "0.1.0"
description = "A lightweight Django plugin for GitHub issue time tracking and productivity monitoring"
readme = "README.md"
license = "MIT"
authors = [
    {name = "OWASP BLT Team", email = "blt@owasp.org"}
]
maintainers = [
    {name = "OWASP BLT Team", email = "blt@owasp.org"}
]
keywords = ["django", "time-tracking", "github-issues", "productivity", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1", 
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"

# Core dependencies
dependencies = [
    "Django>=4.0,<6.0",
    "requests>=2.31.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.14.0",
    "pre-commit>=3.8.0",
    "django-debug-toolbar>=4.4.0",
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/OWASP-BLT/Fresh"
Documentation = "https://github.com/OWASP-BLT/Fresh/tree/main/docs"
Repository = "https://github.com/OWASP-BLT/Fresh"
"Bug Tracker" = "https://github.com/OWASP-BLT/Fresh/issues"
Changelog = "https://github.com/OWASP-BLT/Fresh/blob/main/CHANGELOG.md"

[project.entry-points."django.apps"]
time_logging = "time_logging.apps:TimeLoggingConfig"

[tool.setuptools]
packages = {find = {where = ["."], include = ["time_logging*"]}}
include-package-data = true

[tool.setuptools.package-data]
time_logging = [
    "templates/**/*",
    "static/**/*", 
    "migrations/*.py",
    "management/**/*",
    "locale/**/*"
]

# Code formatting and linting configuration
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["time_logging"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "DJ01",  # django model without __str__ method
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings.py" = ["F405", "F403"]
"*/migrations/*" = ["E501", "F401", "F841"]

# Django-specific ruff rules
[tool.ruff.lint.flake8-django]
django-settings-module = "tests.settings"

# Coverage configuration for testing
[tool.coverage.run]
source = ["time_logging"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
